# emulator-set

./: .env.example  .env.local.example  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .semgrepignore  AGENTS.md  README.md  check-status.sh  docker-compose.yaml  justfile  pyproject.toml  renovate.json  requirements.txt  start-emulators.sh  stop-emulators.sh  test_a2a_inspector.py  test_firebase_emulator.py  test_github_actions.py  test_neo4j_emulator.py  test_pgadapter_emulator.py  test_qdrant_cli.py  test_qdrant_emulator.py
.claude/: settings.local.json
.semgrep/: python-custom.yaml
a2a-inspector/: Dockerfile
bigtable-cli/: Dockerfile  README.md  go.mod  go.sum  main.go
elasticsearch-cli/: Dockerfile  README.md  go.mod  go.sum  main.go
firebase/: .gitignore  Dockerfile  README.md  docker-compose.yaml  firebase.json  firestore.rules  storage.rules
mcp-inspector/: Dockerfile  README.md
neo4j-cli/: Dockerfile  README.md  go.mod  go.sum  main.go
pgadapter-a2a/: README.md  pyproject.toml
pgadapter-a2a/pgadapter_a2a/: agent.py  cli.py  logger.py  server.py  skills.py
pgadapter-a2a/tests/: test_a2a_integration.py  test_agent.py  test_basic_server.py  test_cli.py  test_cli_logging.py  test_database_connection.py  test_database_logging.py  test_end_to_end.py  test_execute_query.py  test_integration.py  test_llm_logging.py  test_logger.py  test_logger_output.py  test_natural_language_query.py  test_serve.py  test_server.py
pgadapter-cli/: Dockerfile  README.md  go.mod  go.sum  main.go
postgres/: Dockerfile
postgres-cli/: Dockerfile  README.md  go.mod  go.sum  main.go
qdrant-cli/: Dockerfile  README.md  go.mod  go.sum  main.go
scripts/: check-gcloud-auth.sh  check-status.sh  export-firebase-data.sh  prebuild-images.sh  run-tests-e2e.sh  run-tests-fast.sh  start-services.sh  stop-services.sh  test-elasticsearch.sh  verify-postgres18.sh  wait-for-services.sh
spanner/: docker-compose.yaml
tests/: __init__.py  conftest.py  test_a2a_inspector.py  test_a2a_inspector_build.py  test_auth_functional.py  test_bigtable_emulator.py  test_directory_structure.py  test_elasticsearch_emulator.py  test_eventarc_functional.py  test_firebase_emulator.py  test_firestore_functional.py  test_github_actions.py  test_mlflow_emulator.py  (+9 more)
(+23 files in other folders)
