[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emulator-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fasta2a>=0.5.0",
    "httpx>=0.28.1",
    "litellm>=1.74.6",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "typer>=0.16.0",
    "uvicorn>=0.30.0",
]

[tool.setuptools]
packages = ["tests"]


[tool.uv.workspace]
members = []

[dependency-groups]
dev = [
    "docker>=7.1.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.12.4",
]
