[project]
name = "emulator-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "aiohttp>=3.10.5",
    "litellm>=1.74.6",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "typer>=0.16.0",
    "uvicorn>=0.30.0",
    "mlflow>=3.4.0",
    "dspy>=3.0.3",
    "marimo[recommended]>=0.17.8",
]

[dependency-groups]
dev = [
    "docker>=7.1.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.12.4",
]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests that require Docker and running emulators",
]
